icon_svg교체/main수정

--- a/publish/mainlist_inc.html
+++ b/publish/mainlist_inc.html
@@ -19,7 +19,7 @@
             <article class="item_list">
                 <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
                 <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
+                    <img src="./common/img/test1.jpg" alt="img1">
                     <p class="dealer_position">
                         <img src="error.gif" onerror="this.style.display='none'" alt="blank">
                     </p>
@@ -28,10 +28,75 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
-        <li class="main_con">                   
+        <li class="main_con">
+            <article class="item_list">
+                <div class="item_box">
+                    <img src="./common/img/test2.jpg" alt="img1">
+                    <p class="dealer_position">
+                        <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
+                    </p>
+                </div>
+                <div class="cont">
+                    <h3 class="item_title">나이키운동화</h3>
+                    <p class="item_price">현재가<strong>10,000</strong>원</p>
+                </div>
+            </article>
+        </li>
+        <li class="main_con">
+            <article class="item_list">
+                <div class="item_box">
+                    <img src="./common/img/test7.png" alt="img1">
+                    <p class="dealer_position">
+                        <img src="./common/img/auction_icon.svg" alt="auction_icon">
+                    </p>
+                    <div class="bid_time">
+                        <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
+                    </div>
+                </div>
+                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
+                <div class="cont">
+                    <div class="bid_title">
+                        <h3 class="item_title">Nike</h3>
+                        <p class="item_price">현재가<strong>20,000</strong>원</p>
+                        <p class="item_price_before">최초가&nbsp;50,000원</p>
+                    </div>
+                </div>
+            </article>
+        </li>
+        <li class="main_con">
+            <article class="item_list">
+                <div class="item_box">
+                    <img src="./common/img/test8.jpg" alt="img1">
+                    <p class="dealer_position">
+                        <img src="error.gif" onerror="this.style.display='none'" alt="blank">
+                    </p>
+                </div>
+                <div class="cont">
+                    <h3 class="item_title">나이키운동화</h3>
+                    <p class="item_price">현재가<strong>20,000</strong>원</p>
+                </div>
+            </article>
+        </li>
+        <li class="main_con">
+            <article class="item_list">
+                <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
+                <div class="item_box">
+                    <img src="./common/img/test9.jpg" alt="img1">
+                    <p class="dealer_position">
+                        <img src="error.gif" onerror="this.style.display='none'" alt="blank">
+                    </p>
+                </div>
+                <!-- 일반 타이틀(.cont) -->
+                <div class="cont">
+                    <h3 class="item_title">나이키운동화</h3>
+                    <p class="item_price">현재가<strong>20,000</strong>원</p>
+                </div>
+            </article>
+        </li>
+        <li class="main_con">
             <article class="item_list">
                 <div class="item_box">
                     <img src="./common/img/main_test_img1.jpg" alt="img1">
@@ -42,7 +107,7 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>10,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
         <li class="main_con">
@@ -52,18 +117,18 @@
                     <p class="dealer_position">
                         <img src="./common/img/auction_icon.svg" alt="auction_icon">
                     </p>
-                </div>
-                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                <div class="cont">
                     <div class="bid_time">
                         <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
                     </div>
+                </div>
+                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
+                <div class="cont">
                     <div class="bid_title">
                         <h3 class="item_title">Nike</h3>
                         <p class="item_price">현재가<strong>20,000</strong>원</p>
                         <p class="item_price_before">최초가&nbsp;50,000원</p>
                     </div>
-                </div>    
+                </div>
             </article>
         </li>
         <li class="main_con">
@@ -77,7 +142,7 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
         <li class="main_con">
@@ -93,10 +158,10 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
-        <li class="main_con">                   
+        <li class="main_con">
             <article class="item_list">
                 <div class="item_box">
                     <img src="./common/img/main_test_img1.jpg" alt="img1">
@@ -107,7 +172,7 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>10,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
         <li class="main_con">
@@ -117,18 +182,18 @@
                     <p class="dealer_position">
                         <img src="./common/img/auction_icon.svg" alt="auction_icon">
                     </p>
-                </div>
-                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                <div class="cont">
                     <div class="bid_time">
                         <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
                     </div>
+                </div>
+                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
+                <div class="cont">
                     <div class="bid_title">
                         <h3 class="item_title">Nike</h3>
                         <p class="item_price">현재가<strong>20,000</strong>원</p>
                         <p class="item_price_before">최초가&nbsp;50,000원</p>
                     </div>
-                </div>    
+                </div>
             </article>
         </li>
         <li class="main_con">
@@ -142,7 +207,7 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
         <li class="main_con">
@@ -158,10 +223,10 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
-        <li class="main_con">                   
+        <li class="main_con">
             <article class="item_list">
                 <div class="item_box">
                     <img src="./common/img/main_test_img1.jpg" alt="img1">
@@ -172,7 +237,7 @@
                 <div class="cont">
                     <h3 class="item_title">나이키운동화</h3>
                     <p class="item_price">현재가<strong>10,000</strong>원</p>
-                </div>    
+                </div>
             </article>
         </li>
         <li class="main_con">
@@ -182,162 +247,18 @@
                     <p class="dealer_position">
                         <img src="./common/img/auction_icon.svg" alt="auction_icon">
                     </p>
-                </div>
-                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                <div class="cont">
                     <div class="bid_time">
                         <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
                     </div>
+                </div>
+                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
+                <div class="cont">
                     <div class="bid_title">
                         <h3 class="item_title">Nike</h3>
                         <p class="item_price">현재가<strong>20,000</strong>원</p>
                         <p class="item_price_before">최초가&nbsp;50,000원</p>
                     </div>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">
-            <article class="item_list">
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                    </p>
                 </div>
-                <div class="cont">
-                    <h3 class="item_title">나이키운동화</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">
-            <article class="item_list">
-                <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                    </p>
-                </div>
-                <!-- 일반 타이틀(.cont) -->
-                <div class="cont">
-                    <h3 class="item_title">나이키운동화</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">                   
-            <article class="item_list">
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                    </p>
-                </div>
-                <div class="cont">
-                    <h3 class="item_title">나이키운동화</h3>
-                    <p class="item_price">현재가<strong>10,000</strong>원</p>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">
-            <article class="item_list">
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                    </p>
-                </div>
-                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                <div class="cont">
-                    <div class="bid_time">
-                        <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                    </div>
-                    <div class="bid_title">
-                        <h3 class="item_title">Nike</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                        <p class="item_price_before">최초가&nbsp;50,000원</p>
-                    </div>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">
-            <article class="item_list">
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                    </p>
-                </div>
-                <div class="cont">
-                    <h3 class="item_title">나이키운동화</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">
-            <article class="item_list">
-                <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                    </p>
-                </div>
-                <!-- 일반 타이틀(.cont) -->
-                <div class="cont">
-                    <h3 class="item_title">나이키운동화</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">                   
-            <article class="item_list">
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                    </p>
-                </div>
-                <div class="cont">
-                    <h3 class="item_title">나이키운동화</h3>
-                    <p class="item_price">현재가<strong>10,000</strong>원</p>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">
-            <article class="item_list">
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                    </p>
-                </div>
-                <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                <div class="cont">
-                    <div class="bid_time">
-                        <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                    </div>
-                    <div class="bid_title">
-                        <h3 class="item_title">Nike</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                        <p class="item_price_before">최초가&nbsp;50,000원</p>
-                    </div>
-                </div>    
-            </article>
-        </li>
-        <li class="main_con">
-            <article class="item_list">
-                <div class="item_box">
-                    <img src="./common/img/main_test_img1.jpg" alt="img1">
-                    <p class="dealer_position">
-                        <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                    </p>
-                </div>
-                <div class="cont">
-                    <h3 class="item_title">나이키운동화</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                </div>    
             </article>
         </li>
     </ul>
