--- a/publish/mypage.html
+++ b/publish/mypage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./common/css/reset.css">
     <link rel="stylesheet" href="./common/css/mypage.css">
     <link rel="stylesheet" href="./common/css/style.css">
-    <script src="./common/js/custom.js"></script>
+    <!-- <script src="./common/js/custom.js"></script> -->
 </head>
 <body>
     <header data-include-path="header.html"></header>
