--- a/publish/mainlist_inc.html
+++ b/publish/mainlist_inc.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mainlist_inc</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    <link rel="stylesheet" href="./common/css/fontawesome/fontawesome-all.css">
     <link rel="stylesheet" href="./common/css/reset.css">
     <link rel="stylesheet" href="./common/css/common.css">
+    <link rel="stylesheet" href="./common/css/fontawesome/style.css">
     <link rel="stylesheet" href="./common/css/media.css">
-    <link rel="stylesheet" href="./common/css/style.css">
     <script src="./common/js/custom.js"></script>
 </head>
 <body>
