--- a/publish/mypage.html
+++ b/publish/mypage.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mypage</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    <link rel="stylesheet" href="./common/css/fontawesome/fontawesome-all.css">
     <link rel="stylesheet" href="./common/css/reset.css">
     <link rel="stylesheet" href="./common/css/mypage.css">
-    <link rel="stylesheet" href="./common/css/style.css">
+    <link rel="stylesheet" href="./common/css/fontawesome/style.css">
     <!-- <script src="./common/js/custom.js"></script> -->
 </head>
 <body>
