--- a/publish/signup-login.html
+++ b/publish/signup-login.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup-login</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    <link rel="stylesheet" href="./common/css/fontawesome/fontawesome-all.css">
     <link rel="stylesheet" href="./common/css/reset.css">
     <link rel="stylesheet" href="./common/css/signup-login.css">   
-    <link rel="stylesheet" href="./common/css/style.css">
+    <link rel="stylesheet" href="./common/css/fontawesome/style.css">
+
 </head>
 <body>
     <section class="form">
