--- a/publish/index.html
+++ b/publish/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="footer" data-include-path="header.html"></header>
+    <header class="header" data-include-path="header.html"></header>
     <!-- 배너 슬라이드-->
     <section id="slider">
         <ul class="img_box">
