--- a/publish/index.html
+++ b/publish/index.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="./common/css/common.css">
     <link rel="stylesheet" href="./common/css/media.css">
     <script src="./common/js/custom.js"></script>
+    <script src="./common/js/include.js"></script>
 </head>
 
 <body>
-    <header class="header" data-include-path="header.html"></header>
+    <header id="header" class="header"></header>
     <!-- 배너 슬라이드-->
     <section id="slider">
         <ul class="img_box">
@@ -38,168 +39,7 @@
         </div>
     </section>
     <!-- 게시글 리스트 -->
-    <main class="container">
-        <ul class="list">
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test1.jpg" />
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">Nike</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    <p class="item_price_before">최초가&nbsp;50,000원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test7.jpg" />
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">나이키운동화사고싶다고오사줘사줘사줘</h3>
-                    <p class="item_price">현재가<strong>10,000</strong>원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test8.jpg" />
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">Nike</h3>
-                    <p class="item_price">현재가<strong>20,000,000,000</strong>원</p>
-                    <p class="item_price_before">최초가&nbsp;50,000원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test8.jpg" />
-                    <p class="bid_time"><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">Nike</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    <p class="item_price_before">최초가&nbsp;50,000원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test5.jpg" />
-                </div>
-                <div class="cont">
-                    <div class="item_tit">스피드러너</div>
-                    <div class="item_price">600,000원</div>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test6.jpg" />
-                </div>
-                <div class="cont">
-                    <div class="item_tit">세탁기</div>
-                    <div class="item_price">250,000원</div>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test7.jpg" />
-                </div>
-                <div class="cont">
-                    <div class="item_tit">비매품</div>
-                    <div class="item_price">0원</div>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test8.jpg" />
-                </div>
-                <div class="cont">
-                    <div class="item_tit">무료나눔^^</div>
-                    <div class="item_price">0원</div>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test1.jpg" />
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">Nike</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    <p class="item_price_before">최초가&nbsp;50,000원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test7.jpg" />
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">나이키운동화사고싶다고오사줘사줘사줘</h3>
-                    <p class="item_price">현재가<strong>10,000</strong>원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test8.jpg" />
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">Nike</h3>
-                    <p class="item_price">현재가<strong>20,000,000,000</strong>원</p>
-                    <p class="item_price_before">최초가&nbsp;50,000원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-            <li class="item">
-                <div class="item_img">
-                    <img src="./common/img/test8.jpg" />
-                    <p class="bid_time"><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                </div>
-                <div class="cont">
-                    <h3 class="item_tit">Nike</h3>
-                    <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    <p class="item_price_before">최초가&nbsp;50,000원</p>
-                </div>
-                <div class="item_tag">
-                    <img src="./common/img/auc_tag.svg" />
-                    <img src="./common/img/del_tag.svg" />
-                </div>
-            </li>
-        </ul>
-    </main>
+    <main id="main" class="main"></main>
     <!-- 더보기 -->
     <div class="more_load">
         <a href="#">더보기 <i class="fas fa-chevron-down"></i></a>
@@ -209,6 +49,6 @@
         <a href="#top"><i class="fas fa-chevron-circle-up"></i>TOP</a>
     </aside>
     <!-- 푸터 -->
-    <footer class="footer" data-include-path="footer.html"></footer>
+    <footer id="footer" class="footer"></footer>
 </body>
 </html>
