--- a/publish/signup-login.html
+++ b/publish/signup-login.html
@@ -85,8 +85,7 @@
             <li class="tab"><a href="#login">로그인</a></li>
         </ul>
 </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="./common/js/signup-login.js"></script>
-
-    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="./common/js/signup-login.js"></script>    
 </body>
 </html>
