--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    
+    <!-- Social Login SRC -->
+    <!-- <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
