--- a/publish/header.html
+++ b/publish/header.html
@@ -22,8 +22,8 @@
             <input type="search" name="search" placeholder=" 어떤 상품을 찾고 계세요?" id="top_search">
         </form>
         <ul class="top_gnb">
-            <li><a href="./signup-login.html"><i class="login"></i>로그인</a></li>
-            <li><a href="./signup-login.html"><i class="join"></i>회원가입</a></li>
+            <li><a href="./login.html"><i class="login"></i>로그인</a></li>
+            <li><a href="./signup.html"><i class="join"></i>회원가입</a></li>
             <li><a href="#service"><i class="service"></i>고객센터</a></li>
         </ul>
         <ul class="top_gnb_after">
@@ -40,8 +40,8 @@
             <li class="user">
                 <p class="title"><i class="fas fa-user-circle"></i>케이트님</p>                
                 <ul>
-                    <li><a href="#">내 별점<i class="star"></i></a></li>
-                    <li><a href="#">kate님의 상점</a></li>
+                    <li><a href="./mypage_review.html">내 별점<i class="star"></i></a></li>
+                    <li><a href="./mypage_defalut.html">kate님의 상점</a></li>
                     <li><a href="#">로그아웃</a></li>
                 </ul>
             </li>    
