--- a/publish/mypage_defalut.html
+++ b/publish/mypage_defalut.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mypage_defalut</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <link rel="stylesheet" href="./common/css/fontawesome/fontawesome-all.css">
-    <link rel="stylesheet" href="./common/css/reset.css">
-    <link rel="stylesheet" href="./common/css/mypage.css">
-    <link rel="stylesheet" href="./common/css/fontawesome/style.css">
-    <script src="./common/js/custom.js"></script>
+    <link rel="stylesheet" href="./common/css/mypage_defalut.css">
     <script src="./common/js/include.js"></script>
 </head>
 <body>
@@ -25,7 +21,6 @@
                             <li class="my_tab on">판매상품<span class="tab_num">2</span></li>
                             <li class="my_tab">구매상품<span class="tab_num">2</span></li>
                             <li class="my_tab">찜상품<span class="tab_num">0</span></li>
-                            <li class="my_tab">알림<span class="tab_num">0</span></li>
                         </ul>
                     </li>
                     <li class="my_state_list">
@@ -51,7 +46,7 @@
                     </li>
                     <li class="my_cont_list">
                         <ul>
-                            <li class="con_inner on">
+                            <li class="my_sell on">
                                 <ul class="user_list">
                                     <li class="item">
                                         <a href="#">
@@ -104,7 +99,7 @@
                                     <a href="#">더보기 <i class="fas fa-chevron-down"></i></a>
                                 </div>
                             </li>
-                            <li class="my_noti">
+                            <li class="my_buy">
                                 <ul class="user_list">
                                     <li class="item">
                                         <a href="#">
@@ -177,11 +172,6 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </li>
-                            <li class="my_like">
-                                <p></p>
-                                <p>알림1</p>
-                                <p>알림1</p>
                             </li>
                         </ul>
                     </li>
