--- a/publish/mypage_myoption.html
+++ b/publish/mypage_myoption.html
@@ -6,40 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my_option</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <link rel="stylesheet" href="./common/css/fontawesome/fontawesome-all.css">
-    <link rel="stylesheet" href="./common/css/reset.css">
-    <link rel="stylesheet" href="./common/css/fontawesome/style.css">
-    <script src="./common/js/custom.js"></script>
+    <link rel="stylesheet" href="./common/css/mypage_option.css">
     <script src="./common/js/include.js"></script>
 </head>
 <body>
     <header id="header" class="header"></header>
     <main>
-        <section class="my_fixed" id="my_fixed" >
-            <div class="breadcrum">
-                <a href="#">HOME</a>
-                <a href="#">나의메뉴</a>
-            </div>
-            <div class="user_info">
-                <div>
-                    <a href="#" class="info_pic"><i class="fas fa-user-circle"></i></a>
-                    <p class="info_name"><span>케이트</span>님의 상점</p>
-                    <a href="#" class="star_rating">
-                        <span class="wrap_star"><span></span></span>
-                        <span class="star_count">02</span>
-                    </a>
-                    <p><span class="info_month">2021년 01월</span> 시작</p>
-                </div>
-                <p>
-                    <a href="#" class="info_btn">내정보설정</a>
-                    <a href="#" class="info_btn">관심 카테고리</a>
-                </p>
-            </div>
-        </section>
+        <section id="my_fixed" class="my_fixed"></section>
         <section class="mypage_con" id="mypage_con">
-            
+            <div class="pf_pic">
+                <form>
+                    <img src="./common/img/user-circle.svg" alt="프로필사진">
+                    <img src="./common/img/camera-circle.svg" alt="프로필사진 등록">
+                    <input type="file" class="pf_img" id="pf_img" accept="image/jpeg, image/png">
+                </form>
+                <p id="pfEmail">kate12345@naver.com</p>
+            </div>
+            <form class="pf_text" id="pf_text">
+                <ul>
+                    <li class="pf_wrap">
+                        <label for="pf_name">닉네임</label>
+                        <input type="text" id="pf_name" minlength="2" maxlength="12" placeholder="케이트"/>
+                        <small class="error">error message</small>
+                        <button type="submit" class="pf_btn">변경</button>
+                    </li>
+                    <li class="pf_wrap">
+                        <label for="phone_input">휴대폰 번호</label>
+                        <input type="tel" id="phone_input" placeholder="010-1234-5678" readonly/>
+                        <button type="submit" class="pf_btn">변경</button>
+                    </li>
+                    <li class="pf_wrap">
+                        <label for="phone_input1"></label>
+                        <input type="tel" id="phone_input1" placeholder="변경할 번호를 입력하세요" />
+                        <small class="error">error message</small>
+                        <button type="submit" class="pf_btn">인증요청</button>
+                    </li>
+                    <li class="pf_wrap">
+                        <label for="phone_input2"></label>
+                        <input type="tel" id="phone_input2" placeholder="인증번호를 입력해주세요"/>
+                        <button type="submit" class="pf_btn">확인</button>
+                    </li>
+                    <li class="pf_wrap">
+                        <label for="password">비밀번호</label>
+                        <input type="password" id="password" placeholder="**********" readonly/>
+                        <button type="submit" class="pf_btn">변경</button>
+                    </li>
+                    <li class="pf_wrap">
+                        <label for="new_password">신규 비밀번호</label>
+                        <input type="password" id="new_password" placeholder="신규 비밀번호를 입력해주세요"/>
+                        <small class="error">error message</small>
+                        <button type="submit" class="pf_btn">변경</button>
+                    </li>
+                </ul>
+            </form>
+            <a href="#open_modal" class="pf_bye btn">회원탈퇴</a>
+            <div id="open_modal" class="open_modal">
+                <div>
+                  <p><b>탈퇴</b> 하시겠습니까?</p>
+                  <a href="#" class="close_modal">예</a>
+                  <a href="#" class="close_modal">아니오</a>
+                </div>
+              </div>
         </section>       
     </main>
     <footer id="footer" class="footer"></footer>
+    <script src="./common/js/mypage_option.js"></script>
 </body>
 </html>
