--- a/publish/mainlist.html
+++ b/publish/mainlist.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mainlist</title>
     <link rel="stylesheet" href="./common/css/mainlist.css">
+    <link rel="stylesheet" href="./common/css/media.css">
 </head>
 <body>
      <!-- 게시글 리스트(.main_list) -->
